added imports to index.less, built and styled header-nav

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation Styles here
+
+.header-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px 0;
+    // .test();
+    h1 {
+        font-color: @shark;
+    }
+    nav {
+        display: flex;
+        justify-content: space-between;
+        width: 50%;
+        padding: 0  4rem;
+        a {
+            font-size: 1.5rem;
+            font-color: @shark;
+            text-decoration: none;
+        }
+        // .test();
+
+    }
+}
