updated home-page header and added button mixin. Buttons still have wierd text bug.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 25px 0;
+    width: 100%;
     // .test();
     h1 {
         font-color: @shark;
@@ -17,7 +18,7 @@
         a {
             font-size: 1.5rem;
             font-color: @shark;
-            text-decoration: none;
+            text-decoration: none; 
         }
         // .test();
 
