--- a/css/index.css
+++ b/css/index.css
@@ -173,6 +173,7 @@ img {
   justify-content: space-between;
   align-items: center;
   padding: 25px 0;
+  width: 100%;
 }
 .header-nav h1 {
   font-color: #212529;
@@ -198,6 +199,13 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .main-header {
+  border-bottom: 1px dashed #C0C0C0;
+  padding: 20px 0;
+}
+.home .main-header h2 {
+  padding: 20px 0;
 }
 .home .content-section {
   margin: 30px 0;
@@ -244,4 +252,17 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  display: block;
+  margin: 0 10px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  text-align: center;
+  text-justify: center;
+  border-radius: 10px;
+  color: white;
+  background-color: #17A2B8;
+  width: 200px;
+  height: 45px;
 }
