--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,14 @@
 .home {
 
+  .main-header {
+    // .test();
+    border-bottom: 1px dashed @silver;
+    padding: 20px 0;
+    h2 {
+      padding: 20px 0;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -45,6 +54,7 @@
     img {
       border-radius: 10px;
     }
+    
   }
 
   .content-pick {
@@ -56,6 +66,9 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      .btn {
+        .custom-btn(white, @eastern-blue);
+      }
     }
   }
 }// home
