--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,3 +4,19 @@
     background-color: yellow;
     border: 1px dashed red;
 }
+
+
+.custom-btn(@txtcolor: white, @bgcolor: @eastern-blue) {
+    display: block;
+    margin: 0 10px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    text-align: center;
+    text-justify: center;
+    border-radius: 10px;
+    color: @txtcolor;
+    background-color: @bgcolor;
+    width: 200px;
+    height: 45px;
+    
+}
