--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,14 @@ img {
   align-items: center;
   padding: 25px 0;
   width: 100%;
+  background-color: yellow;
+  border: 1px dashed red;
+}
+@media (max-width: 500px) {
+  .header-nav {
+    flex-direction: column;
+    padding: 10px 0;
+  }
 }
 .header-nav h1 {
   font-color: #212529;
@@ -183,6 +191,12 @@ img {
   justify-content: space-between;
   width: 50%;
   padding: 0  4rem;
+}
+@media (max-width: 500px) {
+  .header-nav nav {
+    width: 100%;
+    padding: 10px 4rem;
+  }
 }
 .header-nav nav a {
   font-size: 1.5rem;
@@ -259,7 +273,6 @@ img {
   cursor: pointer;
   font-size: 1.5rem;
   text-align: center;
-  text-justify: center;
   border-radius: 10px;
   color: white;
   background-color: #17A2B8;
