--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,5 +17,13 @@
     background-color: @bgcolor;
     width: 200px;
     height: 45px;
-    
+    padding-top: 15px;
+}
+
+.mobile-layout() {
+    width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0px 1em;
 }
