--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 25px 0;
     width: 100%;
-    .test();
+    // .test();
     @media @mobile {
         flex-direction: column;
         padding: 10px 0;
