--- a/css/index.css
+++ b/css/index.css
@@ -174,8 +174,6 @@ img {
   align-items: center;
   padding: 25px 0;
   width: 100%;
-  background-color: yellow;
-  border: 1px dashed red;
 }
 @media (max-width: 500px) {
   .header-nav {
@@ -218,6 +216,11 @@ img {
   border-bottom: 1px dashed #C0C0C0;
   padding: 20px 0;
 }
+@media (max-width: 500px) {
+  .home .main-header {
+    padding: 10px 2em;
+  }
+}
 .home .main-header h2 {
   padding: 20px 0;
 }
@@ -227,13 +230,40 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -242,13 +272,45 @@ img {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+  }
+  .home .inverse-content .img-content {
+    order: 1;
+  }
+}
 .home .inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .text-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+    padding-top: 0;
+  }
+}
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+    padding-bottom: 20px;
+  }
 }
 .home .content-destination {
   width: 75%;
@@ -278,4 +340,5 @@ img {
   background-color: #17A2B8;
   width: 200px;
   height: 45px;
+  padding-top: 15px;
 }
