--- a/css/index.css
+++ b/css/index.css
@@ -316,8 +316,27 @@ img {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+    padding: 0 2em;
+  }
 }
 .home .content-pick {
   padding-top: 30px;
@@ -325,9 +344,26 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 1em;
+    padding: 0 6em;
+  }
 }
 .home .content-pick .destination .btn {
   display: block;
@@ -341,4 +377,9 @@ img {
   width: 200px;
   height: 45px;
   padding-top: 15px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 90%;
+  }
 }
