--- a/less/home-page.less
+++ b/less/home-page.less
@@ -76,9 +76,18 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    // .test();
+    @media @mobile {
+      .mobile-layout();
+      padding: 0px 1em;
+    }
 
     img {
       border-radius: 10px;
+      }
+      @media @mobile {
+        .mobile-layout();
+        padding: 0 2em;
     }
     
   }
@@ -88,12 +97,26 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+ 
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      // .test();
+      @media @mobile {
+        .mobile-layout();
+        padding: 0 6em;
+      }
       .btn {
         .custom-btn(white, @eastern-blue);
+        @media @mobile {
+          width: 90%;
+        }
       }
     }
   }
