--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,11 @@ img {
   padding: 25px 0;
   width: 100%;
 }
+@media (max-width: 850px) {
+  .header-nav {
+    margin: 0 2em;
+  }
+}
 @media (max-width: 500px) {
   .header-nav {
     flex-direction: column;
@@ -190,16 +195,28 @@ img {
   width: 50%;
   padding: 0  4rem;
 }
+@media (max-width: 850px) {
+  .header-nav nav {
+    padding: 5%;
+    margin-left: 6em;
+  }
+}
 @media (max-width: 500px) {
   .header-nav nav {
     width: 100%;
     padding: 10px 4rem;
+    margin: 0;
   }
 }
 .header-nav nav a {
   font-size: 1.5rem;
   font-color: #212529;
   text-decoration: none;
+}
+@media (max-width: 850px) {
+  .header-nav nav a {
+    font-size: 1.25em;
+  }
 }
 .footer {
   width: 100%;
@@ -216,9 +233,9 @@ img {
   border-bottom: 1px dashed #C0C0C0;
   padding: 20px 0;
 }
-@media (max-width: 500px) {
+@media (max-width: 850px) {
   .home .main-header {
-    padding: 10px 2em;
+    margin: 0 2em;
   }
 }
 .home .main-header h2 {
@@ -230,13 +247,19 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 850px) {
+  .home .content-section {
+    margin: 10px 2em;
+  }
+}
 @media (max-width: 500px) {
   .home .content-section {
     width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
   }
 }
 .home .content-section .text-content {
@@ -249,7 +272,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
   }
 }
 .home .content-section .img-content {
@@ -262,7 +286,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
   }
 }
 .home .content-section .img-content img {
@@ -278,7 +303,9 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
+    margin-bottom: 20px;
   }
   .home .inverse-content .img-content {
     order: 1;
@@ -294,7 +321,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
     padding-top: 0;
   }
 }
@@ -308,7 +336,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
     padding-bottom: 20px;
   }
 }
@@ -322,6 +351,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px 1em;
+    margin: 0;
     padding: 0px 1em;
   }
 }
@@ -334,8 +365,9 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
-    padding: 0 2em;
+    padding: 10px 1em;
+    margin: 0;
+    padding: 20px 2em;
   }
 }
 .home .content-pick {
@@ -344,16 +376,26 @@ img {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
+@media (max-width: 850px) {
   .home .content-pick {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    margin-bottom: 20px;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 850px) {
+  .home .content-pick .destination {
+    width: 70%;
+  }
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
@@ -361,7 +403,8 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 1em;
+    padding: 10px 1em;
+    margin: 0;
     padding: 0 6em;
   }
 }
@@ -381,5 +424,6 @@ img {
 @media (max-width: 500px) {
   .home .content-pick .destination .btn {
     width: 90%;
+    margin-bottom: 20px;
   }
 }
