--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,9 +4,10 @@
     // .test();
     border-bottom: 1px dashed @silver;
     padding: 20px 0;
-    @media @mobile {
-      padding: 10px 2em;
+    @media @tablet {
+      .tablet-layout();
     }
+  
     h2 {
       padding: 20px 0;
     }
@@ -18,6 +19,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     // .test();
+    @media @tablet {
+      margin: 10px 2em;
+    }
     @media @mobile {
       .mobile-layout();
     }
@@ -33,6 +37,7 @@
     .img-content {
       width: 48%;
       padding-left: 1%;
+      
       @media @mobile {
         .mobile-layout();
       }
@@ -48,6 +53,7 @@
     border-bottom: 2px dashed @navigation-border;
     @media @mobile {
       .mobile-layout();
+      margin-bottom: 20px;
       .img-content {
         order: 1;
       }
@@ -87,7 +93,7 @@
       }
       @media @mobile {
         .mobile-layout();
-        padding: 0 2em;
+        padding: 20px 2em;
     }
     
   }
@@ -98,16 +104,22 @@
     display: flex;
     justify-content: space-between;
  
-    @media @mobile {
+    @media @tablet {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+    }
+    @media @mobile {
+      margin-bottom: 20px;
     }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
       // .test();
+      @media @tablet {
+        width: 70%;
+      }
       @media @mobile {
         .mobile-layout();
         padding: 0 6em;
@@ -116,6 +128,7 @@
         .custom-btn(white, @eastern-blue);
         @media @mobile {
           width: 90%;
+          margin-bottom: 20px;
         }
       }
     }
