--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,8 +22,13 @@
 
 .mobile-layout() {
     width: 100%;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 0px 1em;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 1em;
+    margin: 0;
+}
+
+.tablet-layout() {
+    margin: 0 2em;
 }
