--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,10 @@
     padding: 25px 0;
     width: 100%;
     // .test();
+    @media @tablet {
+        .tablet-layout();
+    }
+ 
     @media @mobile {
         flex-direction: column;
         padding: 10px 0;
@@ -19,14 +23,22 @@
         justify-content: space-between;
         width: 50%;
         padding: 0  4rem;
+        @media @tablet {
+            padding: 5%;
+            margin-left: 6em;
+        }
         @media @mobile {
             width: 100%;
             padding: 10px 4rem;
+            margin: 0;
         }
         a {
             font-size: 1.5rem;
             font-color: @shark;
-            text-decoration: none; 
+            text-decoration: none;
+            @media @tablet {
+                font-size: 1.25em;
+            } 
         }
         // .test();
 
