added button animation

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,6 +18,10 @@
     width: 200px;
     height: 45px;
     padding-top: 15px;
+    &:hover {
+        background-color: @sandy-beach;
+        color: @eastern-blue;
+    }
 }
 
 .mobile-layout() {
