--- a/css/index.css
+++ b/css/index.css
@@ -421,6 +421,10 @@ img {
   height: 45px;
   padding-top: 15px;
 }
+.home .content-pick .destination .btn:hover {
+  background-color: #FFEBCD;
+  color: #17A2B8;
+}
 @media (max-width: 500px) {
   .home .content-pick .destination .btn {
     width: 90%;
