tweaked one problem in nav for mobile

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,8 +12,7 @@
     }
  
     @media @mobile {
-        flex-direction: column;
-        padding: 10px 0;
+        .mobile-layout();
     }
     h1 {
         font-color: @shark;
