--- a/css/index.css
+++ b/css/index.css
@@ -182,8 +182,12 @@ img {
 }
 @media (max-width: 500px) {
   .header-nav {
+    width: 100%;
     flex-direction: column;
-    padding: 10px 0;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 1em;
+    margin: 0;
   }
 }
 .header-nav h1 {
